Upgrade to Java 25.
Updated dependencies, improve documentation, and enhance chart functionality

- Updated commons-lang3 version from 3.12.0 to 3.20.0.
- Updated controlsfx version from 11.1.1 to 11.2.3.
- Updated testfx version from 4.0.16-alpha to 4.0.18.
- Updated maven-compiler-plugin version from 3.9.0 to 3.15.0.
- Updated maven-surefire-plugin version from 3.0.0-M5 to 3.5.6.
- Added exclusions for org.osgi.core in testfx dependency to prevent IllegalAccessError.
- Enhanced the DensityChartFX class by providing clear documentation for legend handling methods.
- Improved comments in PluggableChartContainer to clarify usage.
- Updated author email formatting in LineStyle and MarkerSymbol enums.
- Updated module dependency diagrams and images to reflect changes in dependencies.